# BayerClash

./: CMakeLists.txt  README.md  bayermo.c  bayermo5.c  bayermo52.c  bayermo53.c  bayermo54.c  bayermo55.c  bayermo6.c  bayermo62.c  bayermo63.c  bayermo635.c  bayermo64.c  bayermo65.c  color.c  color.h  comparator.c  comparator.h  cq.c  cq.h  gx2reduce.c  gx2reduce.h  image.c  image.h  k7.c  k7.h  loader.bas  matrix.h  tetratest.c  thomson.c  thomson.h  useful.c  useful.h
SimpleBlueNoise/: blue_noise_generator.h
libimagequant/: imquantize.c  imquantize.h  km.h  libimagequant.c
samples/: CMakeLists.txt  dither.c
samples/exoquant/: exoquant.c
tetrapal/: tetrapal.c
